# generative-models

./: .gitignore  Dockerfile  Makefile  README-with-toc.md  README.md  README.rst  pyproject.toml  run-multiple.sh  test.md  testother.md
experiments/Bayes-by-Backprop/: Gaussian-variational-posterior.ipynb
experiments/Bayes-by-Backprop/notebooks/: Gaussian_variational_posterior.ipynb  Weight Uncertainty in Neural Networks.ipynb
experiments/GAN/notebooks/: goodfellow_2014.ipynb
experiments/MNIST/: MLproject  mnist.py
experiments/intro/: MNIST.ipynb
experiments/variational-inference/notebooks/: Variational_Lower_Bound.ipynb
mlruns/0/: meta.yaml
mlruns/0/014020a8e6c442fda37a2b41496ae56c/: meta.yaml
mlruns/0/01b709e464434e9a8136dca7048fadb5/: meta.yaml
mlruns/0/01be9326c1da465caaab7dc27acb9190/: meta.yaml
mlruns/0/05a2b2677d294340a19493df50a5ca42/: meta.yaml
mlruns/0/0e176f4ee3874e04af5b96bd794883f3/: meta.yaml
mlruns/0/0efe886fae04421c83430f56af59fbde/: meta.yaml
mlruns/0/145224f25fff4dbc85ac9a981add55e4/: meta.yaml
mlruns/0/178f574b01ff43d59b348f714cfbbfd7/: meta.yaml
mlruns/1/: meta.yaml
projects/mnist/: MLproject  conda.yaml  mnist.py
src/intro/: beginners.py  keras-intro.ipynb  mnist.py  tensorflow-intro.ipynb
tex/: README-gh.md  README.bib  README.md  README.md.new  README.raw.md  README.rst  README.tex  make.sh  references.bib  simple.html  simple.md  simple.tex
tex2/: README.aux  README.bbl  README.bcf  README.bib  README.blg  README.fdb_latexmk  README.fls  README.out  README.run.xml  README.tex  README.toc
(+875 files in other folders)
