[tool.poetry]
name = "generative-models"
version = "0.0.0"
description = ""
authors = ["dsevero <danielsouzasevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
readme2tex = {git = "git+ssh://git@github.com/leegao/readme2tex.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
