[tool.poetry]
name = "generative-models"
version = "0.0.0"
description = ""
authors = ["dsevero <danielsouzasevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "=2.0.0-beta1"
jupyter = "^1.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
