[tool.poetry]
name = "generative-models"
version = "0.0.0"
description = ""
authors = ["dsevero <danielsouzasevero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
keras = "^2.2"
tensorflow = "^1.14"
matplotlib = "^3.1"
pydot = "^1.4"
pandas = "^0.24.2"
gpustats = "^0.0.1"
tensorflow-gpu = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
